typo in color naming

--- a/src.tex
+++ b/src.tex
@@ -22,7 +22,7 @@
             linkcolor = blue,
             urlcolor  = myurlcolor,
             citecolor = blue,
-            linkbordercolor=red;
+            linkbordercolor=red,
             anchorcolor = red;]{hyperref}
 
 % Footnote and margin adjustment packages
