--- a/projectM.tex
+++ b/projectM.tex
@@ -21,7 +21,7 @@
             linkcolor = blue,
             urlcolor  = myurlcolor,
             citecolor = blue,
-            linkbordercolor=red;
+            linkbordercolor=red,
             anchorcolor = red;]{hyperref}
 
 % Footnote and margin adjustment packages
