nerfed digicard experience

--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -37,16 +37,16 @@
         \item Successfully deployed the system in 2 schools and churches, improving operational efficiency and reducing manual intervention.
     \end{rSubsection}
 
-    \begin{rSubsection}
-        {\bf \href{https://techmasterevent.com/project/1andonly}{DigiCard Technologies} – Professional Contact Exchange Platform}
-        {\ttfamily May 2023 - February 2024}
-        {Startup Development {\normalfont \small \ttfamily | JavaScript, NFC Technology, Sanity, Headless CMS, Svelte \& Svelte-kit} }
-        {}
-        \item Implemented just-in-time client-side generation of contact cards, minimizing memory usage and backend load.
-        \item Utilized ESP32 to create custom hardware for programming contact information into NFC cards
-        \item Utilized spreadsheet as a backend for rapid development, enabling product launch within two weeks. Later, it migrated to a headless CMS- Sanity, allowing multiplatform data rendering.
-        \item Secured distribution deals with three institutions, validating the platform’s viability and technical robustness.
-    \end{rSubsection}
+    % \begin{rSubsection}
+    %     {\bf \href{https://techmasterevent.com/project/1andonly}{DigiCard Technologies} – Professional Contact Exchange Platform}
+    %     {\ttfamily May 2023 - February 2024}
+    %     {Startup Development {\normalfont \small \ttfamily | JavaScript, NFC Technology, Sanity, Headless CMS, Svelte \& Svelte-kit} }
+    %     {}
+    %     \item Implemented just-in-time client-side generation of contact cards, minimizing memory usage and backend load.
+    %     \item Utilized ESP32 to create custom hardware for programming contact information into NFC cards
+    %     \item Utilized spreadsheet as a backend for rapid development, enabling product launch within two weeks. Later, it migrated to a headless CMS- Sanity, allowing multiplatform data rendering.
+    %     \item Secured distribution deals with three institutions, validating the platform’s viability and technical robustness.
+    % \end{rSubsection}
 
     \begin{rSubsection}
         {\bf \href{https://pixel-hack.vercel.app/}{Pixel Hack} – Artistic Image Processing}
